--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
                 <label for="Password">Password</label><br>
                 <input type="password" id="password" name="password"><br><br>
             </form> 
+                <div class="password-validation">
+                    <p><input type="checkbox">Use 8 or more characters</p>
+                    <p><input type="checkbox">One uppercase character</p>
+                    <p><input type="checkbox">One lowercase character</p>
+                    <p><input type="checkbox">One special character</p>
+                    <p><input type="checkbox">One number</p><br><br>
+                </div>
+
             <p><input type="checkbox">I want to receive emails about the product, feature updates, events, and marketing promotions</p><br><br>
-            <p>By creating an account, you agree to the <a href="">Terms of use</a> and <a href=""> Privacy Policy.</p>
+            <p>By creating an account, you agree to the <a href="">Terms of use</a> and <a href=""> Privacy Policy.</a></p>
             <form>
                 <input class="submit-btn" type="submit" value="Create an account">
             </form>
             
-            <p>Already have an account? <a href="">Log in</a></p>
+            <p>Already have an account? <a href=""> Log In</a></p>
         </div>
         <div class="image-container">
             <!-- <img src="sebastian-svenson-d2w-_1LJioQ-unsplash 1.png"  alt="Image" > -->
